Fix selection when resizing on Safari

--- a/examples/nextjs-spreadsheet-advanced/src/styles/globals.css
+++ b/examples/nextjs-spreadsheet-advanced/src/styles/globals.css
@@ -72,6 +72,7 @@ svg {
 .resizing-column *,
 .resizing-row * {
   pointer-events: none !important;
+  user-select: none !important;
 }
 
 .grabbing {
